fix: Center `DatePicker`'s icon when `.FormField__label` is visible

--- a/src/scss/Datepicker.scss
+++ b/src/scss/Datepicker.scss
@@ -36,7 +36,6 @@
 	}
 
 	.react-datepicker__input-container {
-		position: relative;
 	}
 	.react-datepicker__input-container::after {
 		@include icon($icons-calendar);
